# codepet

./: .gitignore  .npmrc  AGENTS.md  README.md  index.html  package-lock.json  package.json  pet.html  tsconfig.json  tsconfig.node.json  vite.config.ts
.github/workflows/: release.yml
frontend/: App.svelte  PetApp.svelte  PetApp.test.ts  main.ts  styles.css
frontend/lib/: PetAvatar.svelte  activity.test.ts  activity.ts  api.test.ts  api.ts  bubbleColorSettings.test.ts  bubbleColorSettings.ts  petAtlas.test.ts  petHitTest.test.ts  petHitTest.ts  sound.test.ts  sound.ts  types.ts  updates.test.ts  updates.ts  usageChart.ts
knowledge/00-project/: README.md  product-intent.md
knowledge/10-architecture/: README.md  agent-control.md  cross-platform-boundaries.md  event-pipeline.md  frontend-backend-boundary.md  runtime-topology.md  settings-persistence.md  window-system.md
knowledge/20-product/: README.md  notification-and-approval.md  personalization.md  pet-window-experience.md  task-card-interaction.md
knowledge/30-domains/: README.md
knowledge/40-runbooks/: README.md  github-release-updates.md  hook-not-working.md  performance-monitoring.md  reply-not-shown-in-app.md  task-list-collapsed-or-clipped.md  window-overflows-screen.md
knowledge/50-decisions/: README.md  codex-app-server-as-primary-reply-path.md  qoder-existing-session-reply-unsupported.md  (+1 more)
prompts/: codepet-reorganize-and-knowledge-goal.md
scripts/: export_perf_logs.py  export_perf_logs_test.py  generate_latest_json.mjs  package_signed.py  package_signed_test.py  publish_github_release.mjs  release_version.mjs
src/: App.svelte  PetApp.svelte  PetApp.test.ts  pet.ts  styles.css  styles.test.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/hooks/: code-pet-hook.mjs
src-tauri/icons/: icon.icns
src-tauri/src/: activity_actions.rs  agent_control.rs  agents.rs  app_log.rs  autostart.rs  claude_transcript.rs  codex_app_server.rs  codex_audit.rs  collector.rs  events.rs  hooks.rs  lib.rs  macos_window.rs  main.rs  pets.rs  settings.rs  state.rs  theme_defaults.rs  title_resolver.rs  token_usage.rs
src-tauri/src/activity/: collector.rs  events.rs  mod.rs  title_resolver.rs  token_usage.rs
src-tauri/src/agent/: actions.rs  claude_transcript.rs  codex_app_server.rs  codex_audit.rs  control.rs  hooks.rs  mod.rs  registry.rs
src-tauri/src/app/: autostart.rs  cli.rs  log.rs  mod.rs  notifications.rs  settings.rs  state.rs  updates.rs
src-tauri/src/pet/: library.rs  mod.rs  subject_cutout.rs
src-tauri/src/platform/: macos_window.rs  mod.rs
src-tauri/tests/: activity_actions_tests.rs  agent_control_tests.rs  app_log_tests.rs  autostart_tests.rs  claude_transcript_tests.rs  codex_audit_tests.rs  event_normalizer_tests.rs  hook_config_tests.rs  hook_script_tests.rs  macos_window_tests.rs  pet_library_tests.rs  settings_tests.rs  spool_tests.rs  startup_perf_tests.rs  state_tests.rs  subject_cutout_tests.rs  title_resolver_tests.rs  token_usage_tests.rs  tray_tests.rs  windows_subsystem_tests.rs
src/lib/: api.ts  (+17 more)
(+42 files in other folders)
