[package]
name = "code-pet"
version = "0.1.2"
description = "Pixel desktop pet for Codex, Claude Code, and Qoder hooks"
authors = ["Code Pet Contributors"]
edition = "2021"

[lib]
name = "code_pet_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "code-pet"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
axum = "0.7"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
hmac = "0.12"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tauri = { version = "2", features = ["protocol-asset", "macos-private-api", "tray-icon"] }
open = "5"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
toml_edit = "0.22"
url = "2"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.25"
objc2 = "0.6.4"
objc2-core-graphics = "0.3.2"
objc2-core-image = "0.3.2"
objc2-foundation = "0.3.2"
objc2-vision = "0.3.2"
tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel.git", rev = "a3122e894383aa068ec5365a42994e3ac94ba1b6" }

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-autostart = "2"
